--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,9 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_quiz__screen__easy1">Quiz_Screen_Easy1</string>
     <string name="true">true</string>
+    <string name="title_activity_quiz__screen1">Quiz_Screen1</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
+    <string name="title_activity_quiz1__screen">Quiz1_Screen</string>
 </resources>
