--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_quiz2__screen">Quiz2_Screen</string>
     <string name="title_activity_quiz__screen__easy1">Quiz_Screen_Easy1</string>
-    <string name="true">true</string>
+    <string name="tru">true</string>
     <string name="title_activity_quiz__screen1">Quiz_Screen1</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
